--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
+large file.jpeg
+medium file.jpeg
+small file.jpeg
